Fix aligning workout cards

--- a/css/src/workouts.css
+++ b/css/src/workouts.css
@@ -2,6 +2,7 @@
 #wpseo-workouts-container-free h3 {
 	color: #a4286a;
 	font-weight: 500;
+	letter-spacing: -0.15px;
 }
 
 #wpseo-workouts-container-free h3 {
